apply pagination and complete